--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,6 @@
     <script src="bundle.js"></script>
   </head>
   <body>
-    <div id="todoList">
-      <h1>ToDo</h1>
-      <p>
-        <input type="text"  placeholder="ToDo" data-bind="value: text">
-        <input type="text"  placeholder="締め切り" data-bind="value: deadline">
-        <button data-bind="click:add">タスクを積む</button>
-      </p>
-
-      <ul data-bind="foreach: todos, visible:todos().length > 0">
-        <li>
-          <span data-bind="text: $root.printToDo($data)"></span> -
-          <button data-bind="click:$root.remove">消す</button>
-        </li>
-      </ul>
-    </div>
+    <todo-list></todo-list>
   </body>
 </html>
